--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.13
   loadmore: ^2.0.1
+  expandable: ^5.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
